[package]
name = "yipir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
base16ct = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
polars = { version = "0.30.0", features = ["lazy", "diff", "ewma", "object", "rows"] }
polars-io = { version = "0.30.0", features = ["json"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.99"
sha2 = "0.10.7"
tokio = { version = "1.28.2", features = ["full"] }
tungstenite = { version = "0.19.0", features = ["native-tls"] }
uuid = { version = "1.4.0", features = ["v4"] }
